feat: add content-addressed package management